<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_gray"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.ibm.mil.readyapps.telco.views.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:text="@string/app_name"
            android:textColor="@color/dark_indigo"
            android:textSize="14sp"
            app:font="@string/roboto_medium" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp">

            <com.ibm.mil.readyapps.telco.views.RobotoTextView
                android:id="@+id/offer_termsconditions_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searching"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:font="@string/roboto_regular" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"
            >

            <com.ibm.mil.readyapps.telco.views.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15sp"
                android:text="@string/terms_conditions"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:font="@string/roboto_medium" />

            <com.ibm.mil.readyapps.telco.views.RobotoTextView
                android:id="@+id/termsconditions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15sp"
                android:text=""
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                app:font="@string/roboto_regular" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>