<?xml version="1.0" encoding="utf-8"?>
<!--
~ Licensed Materials - Property of IBM
~ © Copyright IBM Corporation 2015. All Rights Reserved.
-->
<LinearLayout android:id="@+id/header"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <com.ibm.mil.readyapps.telco.views.RobotoTextView
        android:id="@+id/divider_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:layout_marginLeft="@dimen/layout_left_margin"
        android:layout_marginStart="@dimen/layout_right_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/current_cycle_header"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/header_size"
        app:font="@string/roboto_medium"
        />

    <com.ibm.mil.readyapps.telco.views.RobotoTextView
        android:id="@+id/no_offer_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_offer_placeholder_text"
        android:layout_marginTop="@dimen/no_offer_placeholder_top_margin"
        android:layout_marginBottom="@dimen/no_offer_placeholder_top_margin"
        android:layout_marginLeft="@dimen/no_offer_placeholder_left_margin"
        android:layout_marginStart="@dimen/no_offer_placeholder_left_margin"
        android:textSize="12sp"
        android:textColor="@color/light_gray"/>

</LinearLayout>